crates/glyph-cli/tests/corpus/invalid/freeform_flow_statement.glyph
skill demo()
    description: "Demo."
    quality:
        if x()
            "x is true"
    flow:
        "Do."
